refactor: Update file structure and improve bilingual URL documentation

--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -8,15 +8,30 @@ The site supports two languages:
 
 ## URL Structure
 
+### Current Implementation
+Both languages use the same English route names with different locale prefixes:
+
 | Page | English | Spanish |
 |------|---------|---------|
 | Home | `/en` | `/es` |
+| Paintings | `/en/paintings` | `/es/paintings` |
+| Sculptures | `/en/sculptures` | `/es/sculptures` |
+| Sketches | `/en/sketches` | `/es/sketches` |
+| Photography | `/en/photography` | `/es/photography` |
+| Journals | `/en/journals` | `/es/journals` |
+| Journal Entry | `/en/journals/[slug]` | `/es/journals/[slug]` |
+| Contact | `/en/contact` | `/es/contact` |
+
+### Planned: Localized Routes (Future Enhancement)
+Route translations are defined in `src/lib/i18n.ts` for potential future implementation:
+
+| Page | English | Spanish (planned) |
+|------|---------|---------|
 | Paintings | `/en/paintings` | `/es/pinturas` |
 | Sculptures | `/en/sculptures` | `/es/esculturas` |
 | Sketches | `/en/sketches` | `/es/bocetos` |
 | Photography | `/en/photography` | `/es/fotografia` |
 | Journals | `/en/journals` | `/es/diario` |
-| Journal Entry | `/en/journals/[slug]` | `/es/diario/[slug]` |
 | Contact | `/en/contact` | `/es/contacto` |
 
 ## How It Works
@@ -30,7 +45,7 @@ The site supports two languages:
 The `[lang]` dynamic segment captures the locale:
 ```
 src/app/[lang]/page.tsx           → /en or /es
-src/app/[lang]/paintings/page.tsx → /en/paintings or /es/pinturas
+src/app/[lang]/paintings/page.tsx → /en/paintings or /es/paintings
 ```
 
 ### Language Toggle
@@ -39,7 +54,8 @@ Component switches between languages while preserving the current page:
 import { getAlternatePath } from '@/lib/i18n'
 
 const { locale, path } = getAlternatePath(currentLocale, currentPath)
-// If on /en/paintings → returns { locale: 'es', path: '/es/pinturas' }
+// If on /en/paintings → returns { locale: 'es', path: '/es/paintings' }
+// (Route translation is available but currently swaps locale prefix only)
 ```
 
 ## Content Localization
